# os-2

./: .gitignore  CMakeLists.txt  README.md  install_deps.sh  run.sh
include/: ipc.h  ker_calls.h  list.h  panic.h  proc.h  riscv.h  syscall.h  task.h  vm.h
kernel/: CMakeLists.txt  ipc.c  ker_calls.c  main.c  proc.c  sched.c  sleeplock.c  start.S  syscall.c  task.c  trap.c  vm.c
kernel/servers/: CMakeLists.txt  crt0.S  procmgr.c  user.ldS
kernel/sys/: CMakeLists.txt  sys_sbrk.c  sys_write.c
userland/: CMakeLists.txt  crt0.S  init.c  ipc_echo.c
